Update comment for generating VAPID keys

--- a/backend/.env
+++ b/backend/.env
@@ -11,7 +11,7 @@ MAILJET_API_SECRET=MAILJET_API_SECRET
 MAIL_FROM=alerts@yourdomain.com
 MAIL_FROM_NAME=GreenDay Alerts
 
-# Web Push VAPID keys (generate with `npx web-push generate-vapid-keys` or using code below)
+# Web Push VAPID keys (generate with `npx web-push generate-vapid-keys`)
 VAPID_PUBLIC_KEY=BP2an1MaEO_XtelVuROl7bYZlcjbN-BZX9tU-deJpQl-4W4Q2HvVecFWfWcDsjNfkTzR91DyeWou-JxVeDifus4
 VAPID_PRIVATE_KEY=GeTppD20AmXSNjHJ-wrKYcY1WyC7MqcWju-2UXVsbzA
 VAPID_SUBJECT=mailto:you@yourdomain.com
